--- a/.travis.yml
+++ b/.travis.yml
@@ -8,5 +8,7 @@ env:
   - ROS_DISTRO="noetic"
 install:
   - git clone https://github.com/ros-industrial/industrial_ci.git .ci_config
+  - pip install flatten-dict
+  - pip install tqdm
 script:
   - source .ci_config/travis.sh
