--- a/package.xml
+++ b/package.xml
@@ -15,6 +15,10 @@
   <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-numpy</exec_depend>
   <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-pandas</exec_depend>
   <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-pandas</exec_depend>
+  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-tqdm</exec_depend>
+  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-tqdm</exec_depend>
+  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-flatten-dict</exec_depend>
+  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-flatten-dict</exec_depend>
   <exec_depend>rosbag</exec_depend>
   <exec_depend>rospy_message_converter</exec_depend>
   <exec_depend>roslib</exec_depend>
